# sdd-python-service

./: .cursorrules  CLAUDE.md  Makefile  README.md  env.example  flake.nix  poetry.toml  pyproject.toml
.cursor/rules/: cursor-collab-rules-v1.mdc  git-commit-rules-v1.mdc  git-rules.mdc  pr-message-v1.mdc
.cursor/rules/not-implemented-yet/: cursor-debug-rules-v1.mdc  cursor-refactor-rules-v1.mdc  cursor-review-rules-v1.mdc  cursor-test-strategy-rules-v1.mdc
alembic/: README.md  env.py
alembic/versions/: 001_initial_schema.py  README.md
docker/: docker-compose.build.yml  docker-compose.dev.yml  docker-compose.run.yml  docker-compose.test.yml
docker/images/: Dockerfile.base  Dockerfile.prd  Dockerfile.stg  README.md
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md  cli-organization.md
docs/archive/: README.md
docs/current/: README.md
docs/deployment/: README.md
docs/development/: README.md
docs/implementation/: README.md
docs/infra/: README.md
docs/issues/: README.md
docs/planning/: README.md
docs/quickstart/: README.md
docs/testing/: README.md
docs/troubleshooting/: README.md
specs/: IMPLEMENTATION_STATUS.md  README.md  SPECS_SUMMARY.md  index.md
specs/api/: README.md
specs/components/: README.md
specs/components/common/: README.md
specs/components/models/: README.md
specs/contracts/: README.md  api-contract.md
specs/conventions/: 00-repository-overview.md  01-python-conventions.md  02-api-design.md  03-module-structure.md  04-testing-standards.md  05-security-guidelines.md  README.md
specs/examples/: README.md
specs/examples/requests/: README.md
specs/examples/responses/: README.md
specs/features/: README.md
specs/features/health/: README.md  api.md
specs/features/weather/: README.md
specs/integrations/: README.md
specs/memory/: constitution.md
specs/pec-models/: pec-template.md
specs/schemas/: README.md  database-schema.md
specs/security/: README.md
specs/tests/: README.md
specs/validation/: README.md
specs/versions/: README.md
specs/workflows/: README.md  github-workflow.md  issue-templates.md  pr-template.md  project-management.md  time-estimation-guide.md
src/fastapi_service/: __init__.py  main.py  router.py
src/fastapi_service/cli/: README.md  __init__.py  base.py  main.py
src/fastapi_service/core/: __init__.py  auth.py  config.py  dependencies.py  logging.py
tests/e2e/: README.md
tests/integration/: README.md
tests/unit/: README.md
(+46 files in other folders)
